💄 MT-760 Fix spacing in text animal disease (#322)
* Fix spacing in text animal disease

MT-760

* Use resposive variables

MT-760

* Update story

--- a/src/scss/components/_animal-disease.scss
+++ b/src/scss/components/_animal-disease.scss
@@ -1,12 +1,10 @@
 @use '../theme' as *;
 
 .animal-disease {
-  .intro {
-    margin-top: $spacer-small;
-    font-size: $font-size-body;
-    font-weight: $font-weight-normal;
+  .text {
+    margin-top: var(--spacer-x-small);
   }
   .disclosure {
-    margin-top: $spacer-small;
+    margin-top: var(--spacer-x-small);
   }
 }
